istio/5_deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-app-v1
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: user-app
        version: v1
    spec:
      containers:
        - name: user-app
          image: javorex/user-micronaut-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8073
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: offer-app-v1
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: offer-app
        version: v1
    spec:
      containers:
        - name: offer-app
          image: javorex/offer-spring-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8076
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: instalment-app-v1
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: instalment-app
        version: v1
    spec:
      containers:
        - name: instalment-app
          image: javorex/instalment-spring-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8077
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: loan-app-v1
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: loan-app
        version: v1
    spec:
      containers:
        - name: loan-app
          image: javorex/loan-spring-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8078
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: loan-frontend-v1
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: loan-frontend
        version: v1
    spec:
      containers:
        - name: loan-frontend
          image: javorex/loan-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7010
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: offer-frontend-v1
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: offer-frontend
        version: v1
    spec:
      containers:
        - name: offer-frontend
          image: javorex/offer-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7001
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: product-app-v1
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: product-app
        version: v1
    spec:
      containers:
        - name: product-app
          image: javorex/product-micronaut-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8075
