istio/2_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: istio-system
spec:
  type: ExternalName
  externalName: ext-keycloak.infrastructure.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: ext-keycloak
  namespace: infrastructure
spec:
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ext-keycloak
  namespace: infrastructure
subsets:
  - addresses:
      - ip: 192.168.99.1
    ports:
      - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: offer-app
  namespace: app
  labels:
    app: offer-app
spec:
  ports:
    - port: 8076
      name: http
      protocol: TCP
  selector:
    app: offer-app
---
apiVersion: v1
kind: Service
metadata:
  name: offer-frontend
  namespace: app
  labels:
    app: offer-frontend
spec:
  ports:
    - port: 7001
      name: http
      protocol: TCP
  selector:
    app: offer-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: user-app
  namespace: app
  labels:
    app: user-app
spec:
  ports:
    - targetPort: 8073
      port: 80
      name: http
      protocol: TCP
  selector:
    app: user-app
---
apiVersion: v1
kind: Service
metadata:
  name: instalment-app
  namespace: app
  labels:
    app: instalment-app
spec:
  ports:
    - targetPort: 8077
      port: 80
      name: http
      protocol: TCP
  selector:
    app: instalment-app
---
apiVersion: v1
kind: Service
metadata:
  name: loan-app
  namespace: app
  labels:
    app: loan-app
spec:
  ports:
    - targetPort: 8078
      port: 80
      name: http
      protocol: TCP
  selector:
    app: loan-app
---
apiVersion: v1
kind: Service
metadata:
  name: loan-frontend
  namespace: app
  labels:
    app: loan-frontend
spec:
  ports:
    - port: 7010
      name: http
      protocol: TCP
  selector:
    app: loan-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: product-app
  namespace: app
  labels:
    app: product-app
spec:
  ports:
    - targetPort: 8075
      port: 80
      name: http
      protocol: TCP
  selector:
    app: product-app
