istio/3_routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
  namespace: app
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-offer
  namespace: app
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
      - uri:
          prefix: /offer/
      route:
      - destination:
          host: offer-app
          port:
            number: 8076
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-offer-frontend
  namespace: app
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: /offer-frontend/
      route:
        - destination:
            host: offer-frontend
            port:
              number: 7001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-user
  namespace: app
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: /user/
      route:
        - destination:
            host: user-app
            port:
              number: 80
